crates/ruff_linter/src/rules/flake8_pytest_style/snapshots/ruff_linter__rules__flake8_pytest_style__tests__PT023_parentheses.snap
---
source: crates/ruff_linter/src/rules/flake8_pytest_style/mod.rs
---
PT023 [*] Use `@pytest.mark.foo()` over `@pytest.mark.foo`
  --> PT023.py:17:1
   |
17 | @pytest.mark.foo
   | ^^^^^^^^^^^^^^^^
18 | def test_something():
19 |     pass
   |
help: Add parentheses
   |
17 | @pytest.mark.foo()
   |                 ++

PT023 [*] Use `@pytest.mark.foo()` over `@pytest.mark.foo`
  --> PT023.py:22:1
   |
22 | @pytest.mark.foo
   | ^^^^^^^^^^^^^^^^
23 | class TestClass:
24 |     def test_something():
   |
help: Add parentheses
   |
22 | @pytest.mark.foo()
   |                 ++

PT023 [*] Use `@pytest.mark.foo()` over `@pytest.mark.foo`
  --> PT023.py:29:5
   |
28 | class TestClass:
29 |     @pytest.mark.foo
   |     ^^^^^^^^^^^^^^^^
30 |     def test_something():
31 |         pass
   |
help: Add parentheses
   |
29 |     @pytest.mark.foo()
   |                     ++

PT023 [*] Use `@pytest.mark.foo()` over `@pytest.mark.foo`
  --> PT023.py:35:5
   |
34 | class TestClass:
35 |     @pytest.mark.foo
   |     ^^^^^^^^^^^^^^^^
36 |     class TestNestedClass:
37 |         def test_something():
   |
help: Add parentheses
   |
35 |     @pytest.mark.foo()
   |                     ++

PT023 [*] Use `@pytest.mark.foo()` over `@pytest.mark.foo`
  --> PT023.py:43:9
   |
41 | class TestClass:
42 |     class TestNestedClass:
43 |         @pytest.mark.foo
   |         ^^^^^^^^^^^^^^^^
44 |         def test_something():
45 |             pass
   |
help: Add parentheses
   |
43 |         @pytest.mark.foo()
   |                         ++
