crates/ruff_linter/src/rules/flake8_pytest_style/snapshots/ruff_linter__rules__flake8_pytest_style__tests__PT024.snap
---
source: crates/ruff_linter/src/rules/flake8_pytest_style/mod.rs
---
PT024 [*] `pytest.mark.asyncio` is unnecessary for fixtures
  --> PT024.py:14:1
   |
14 | @pytest.mark.asyncio()
   | ^^^^^^^^^^^^^^^^^^^^^^
15 | @pytest.fixture()
16 | async def my_fixture():  # Error before
   |
help: Remove `pytest.mark.asyncio`
   |
14 - @pytest.mark.asyncio()
   |

PT024 [*] `pytest.mark.asyncio` is unnecessary for fixtures
  --> PT024.py:20:1
   |
20 | @pytest.mark.asyncio
   | ^^^^^^^^^^^^^^^^^^^^
21 | @pytest.fixture()
22 | async def my_fixture():  # Error before no parens
   |
help: Remove `pytest.mark.asyncio`
   |
20 - @pytest.mark.asyncio
   |

PT024 [*] `pytest.mark.asyncio` is unnecessary for fixtures
  --> PT024.py:27:1
   |
26 | @pytest.fixture()
27 | @pytest.mark.asyncio()
   | ^^^^^^^^^^^^^^^^^^^^^^
28 | async def my_fixture():  # Error after
29 |     return 0
   |
help: Remove `pytest.mark.asyncio`
   |
27 - @pytest.mark.asyncio()
   |

PT024 [*] `pytest.mark.asyncio` is unnecessary for fixtures
  --> PT024.py:33:1
   |
32 | @pytest.fixture()
33 | @pytest.mark.asyncio
   | ^^^^^^^^^^^^^^^^^^^^
34 | async def my_fixture():  # Error after no parens
35 |     return 0
   |
help: Remove `pytest.mark.asyncio`
   |
33 - @pytest.mark.asyncio
   |
