crates/ruff_linter/src/rules/flake8_pytest_style/snapshots/ruff_linter__rules__flake8_pytest_style__tests__PT030_extend_broad_exceptions.snap
---
source: crates/ruff_linter/src/rules/flake8_pytest_style/mod.rs
---
PT030 `pytest.warns(EncodingWarning)` is too broad, set the `match` parameter or use a more specific warning
  --> PT030.py:11:23
   |
11 |     with pytest.warns(EncodingWarning):
   |                       ^^^^^^^^^^^^^^^
   |

PT030 `pytest.warns(UserWarning)` is too broad, set the `match` parameter or use a more specific warning
  --> PT030.py:16:23
   |
16 |     with pytest.warns(UserWarning):
   |                       ^^^^^^^^^^^
   |

PT030 `pytest.warns(UserWarning)` is too broad, set the `match` parameter or use a more specific warning
  --> PT030.py:19:40
   |
19 |     with pytest.warns(expected_warning=UserWarning):
   |                                        ^^^^^^^^^^^
   |

PT030 `pytest.warns(UserWarning)` is too broad, set the `match` parameter or use a more specific warning
  --> PT030.py:27:23
   |
27 |     with pytest.warns(UserWarning, match=None):
   |                       ^^^^^^^^^^^
   |

PT030 `pytest.warns(UserWarning)` is too broad, set the `match` parameter or use a more specific warning
  --> PT030.py:30:23
   |
30 |     with pytest.warns(UserWarning, match=""):
   |                       ^^^^^^^^^^^
   |

PT030 `pytest.warns(UserWarning)` is too broad, set the `match` parameter or use a more specific warning
  --> PT030.py:33:23
   |
33 |     with pytest.warns(UserWarning, match=f""):
   |                       ^^^^^^^^^^^
   |
